sol.h

#define sol sol_inline
  typedef long double Float;
  typedef double Float;
  typedef float Float;
  //////////////////////////////////////////////////////////////////////////////
 // Math Constants ////////////////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////

/// sol_pi ///
// Description
//   The constant used to equal the value of Pi for Sol's internal calculations.

static const Float sol_pi = ((Float)(3.14159265358979323846));
/// sol_tau ///
// Description
//   A constant which is equal to two times the value of Pi for Sol's internal
//   calculations.

static const Float sol_tau = ((Float)(6.28318530717958647692));
/// sol_g ///
// Description
//   A constant which is equal to the acceleration of gravity in m/s/s.

static const Float sol_g = ((Float)(9.80665));
/// sol_c ///
// Description
//   A constant which is equal to the speed of light in m/s.

static const Float sol_c = ((Float)(299792000));
  //////////////////////////////////////////////////////////////////////////////
 // Struct Type Definitions ///////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////

/// Vec2 ///
// Description
//   A type comprised of two floats to represent a 2D vector or position.
// Fields
//   x: Dimension (Float)
//   y: Dimension (Float)
//   f: Dimensions (Float[2])

typedef struct {
  union {
    struct {
      Float x, y;
    };
    Float f[2];
    #if defined(SOL_AVX_64)
      __m128d avx64;
    #elif defined(SOL_AVX_32)
      __m128 avx32;
    #elif defined(SOL_NEON_64)
      f64x2_t neon64;
    #elif defined(SOL_NEON_32)
      f32x2_t neon32;
    #endif
  };
} Vec2;
/// Vec3 ///
// Description
//   A type comprised of three floats to represent a 3D vector or position.
// Fields
//   x: Dimension (sol_f)
//   y: Dimension (sol_f)
//   z: Dimension (sol_F)
//   f: Dimensions (Float[3])

typedef struct {
  union {
    struct {
      Float x, y, z;
    };
    Float f[3];
    #if defined(SOL_AVX_64)
      __m256d avx64;
    #elif defined(SOL_AVX_32)
      __m128 avx32;
    #elif defined(SOL_NEON_64)
      f64x4_t neon64;
    #elif defined(SOL_NEON_32)
      f32x4_t neon32;
    #endif
  };
} Vec3;
/// Ray3 ///
// Description
//   A type comprised of a 3D position and vector pair which represent
//   a ray.
// Fields
//   pos: Position (Vec3)
//   vec: Vector (Vec3)

typedef struct {
  Vec3 pos, vec;
} Ray3;
/// Seg2 ///
// Description
//   A type comprised of two 2D positions that represent a line segment.
// Fields
//   orig: Position (Vec2)
//   dest: Position (Vec2)

typedef struct {
  Vec2 orig, dest;
} Seg2;
/// Seg3 ///
// Description
//   A type comprised of two 3D positions that represent a line segment.
// Fields
//   orig: Position (Vec3)
//   dest: Position (Vec3)

typedef struct {
  Vec3 orig, dest;
} Seg3;
/// Mat2 ///
// Description
//   A type comprised of a 2x2 matrix of Float types, or two 2D
//   vectors.
// Fields
//   v: Vector Matrix (Vec2[2])
//   f: Float Matrix (Float[2][2])

typedef union {
  Vec2 v[2];
  Float f[2][2];
} Mat2;
Ray3 ray3_addp(Ray3 r, Vec3 p);
Ray3 ray3_addpf(Ray3 r, Float f);
Ray3 ray3_addv(Ray3 r, Vec3 v);
Ray3 ray3_addvf(Ray3 r, Float f);
Ray3 ray3_subp(Ray3 r, Vec3 p);
Ray3 ray3_subpf(Ray3 r, Float f);
Ray3 ray3_psub(Vec3 p, Ray3 r);
Ray3 ray3_pfsub(Float f, Ray3 r);
Ray3 ray3_subv(Ray3 r, Vec3 v);
Ray3 ray3_subvf(Ray3 r, Float f);
Ray3 ray3_vsub(Vec3 v, Ray3 r);
Ray3 ray3_vfsub(Float f, Ray3 r);
Ray3 ray3_mulp(Ray3 r, Vec3 p);
Ray3 ray3_mulpf(Ray3 r, Float f);
Ray3 ray3_mulv(Ray3 r, Vec3 v);
Ray3 ray3_mulvf(Ray3 r, Float f);
Ray3 ray3_divp(Ray3 r, Vec3 p);
Ray3 ray3_divpf(Ray3 r, Float f);
Ray3 ray3_pdiv(Vec3 p, Ray3 r);
Ray3 ray3_pfdiv(Float f, Ray3 r);
Ray3 ray3_divv(Ray3 r, Vec3 v);
Ray3 ray3_divvf(Ray3 r, Float f);
Ray3 ray3_vdiv(Vec3 v, Ray3 r);
Ray3 ray3_vfdiv(Float f, Ray3 r);
Ray3 ray3_avgp(Ray3 r, Vec3 p);
Ray3 ray3_avgpf(Ray3 r, Float f);
Ray3 ray3_avgv(Ray3 r, Vec3 v);
Ray3 ray3_avgvf(Ray3 r, Float f);
  //////////////////////////////////////////////////////////////////////////////
 // Seg2 Function Declarations ////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////

Seg2 seg2_init(Vec2 orig, Vec2 dest);
Seg2 seg2_initv(Vec2 v);
Seg2 seg2_initf(Float f);
Seg2 seg2_zero(void);
Seg2 seg2_add(Seg2 a, Seg2 b);
Seg2 seg2_addv(Seg2 s, Vec2 v);
Seg2 seg2_addf(Seg2 s, Float f);
Seg2 seg2_sub(Seg2 a, Seg2 b);
Seg2 seg2_subv(Seg2 s, Vec2 v);
Seg2 seg2_vsub(Vec2 v, Seg2 s);
Seg2 seg2_subf(Seg2 s, Float f);
Seg2 seg2_fsub(Float f, Seg2 s);
Seg2 seg2_mul(Seg2 a, Seg2 b);
Seg2 seg2_mulv(Seg2 s, Vec2 v);
Seg2 seg2_mulf(Seg2 s, Float f);
Seg2 seg2_div(Seg2 a, Seg2 b);
Seg2 seg2_divv(Seg2 s, Vec2 v);
Seg2 seg2_vdiv(Vec2 v, Seg2 s);
Seg2 seg2_divf(Seg2 s, Float f);
Seg2 seg2_fdiv(Float f, Seg2 s);
Seg2 seg2_avg(Seg2 a, Seg2 b);
Seg2 seg2_avgv(Seg2 s, Vec2 v);
Seg2 seg2_avgf(Seg2 s, Float f);
  //////////////////////////////////////////////////////////////////////////////
 // Seg3 Function Declarations ////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////

Seg3 seg3_init(Vec3 orig, Vec3 dest);
Seg3 seg3_initv(Vec3 v);
Seg3 seg3_initf(Float f);
Seg3 seg3_zero(void);
Seg3 seg3_add(Seg3 a, Seg3 b);
Seg3 seg3_addv(Seg3 s, Vec3 v);
Seg3 seg3_addf(Seg3 s, Float f);
Seg3 seg3_sub(Seg3 a, Seg3 b);
Seg3 seg3_subv(Seg3 s, Vec3 v);
Seg3 seg3_vsub(Vec3 v, Seg3 s);
Seg3 seg3_subf(Seg3 s, Float f);
Seg3 seg3_fsub(Float f, Seg3 s);
Seg3 seg3_mul(Seg3 a, Seg3 b);
Seg3 seg3_mulv(Seg3 s, Vec3 v);
Seg3 seg3_mulf(Seg3 s, Float f);
Seg3 seg3_div(Seg3 a, Seg3 b);
Seg3 seg3_divv(Seg3 s, Vec3 v);
Seg3 seg3_vdiv(Vec3 v, Seg3 s);
Seg3 seg3_divf(Seg3 s, Float f);
Seg3 seg3_fdiv(Float f, Seg3 s);
Seg3 seg3_avg(Seg3 a, Seg3 b);
Seg3 seg3_avgv(Seg3 s, Vec3 v);
Seg3 seg3_avgf(Seg3 s, Float f);
  //////////////////////////////////////////////////////////////////////////////
 // Mat2 Function Declarations ////////////////////////////////////////////////
//////////////////////////////////////////////////////////////////////////////

Mat2 mat2_init(Float f11, Float f12,
                          Float f21, Float f22);
Mat2 mat2_initv(Vec2 v1,
                           Vec2 v2);
Mat2 mat2_initf(Float f);
Mat2 mat2_zero(void);