sol.nim


proc ray3_addp*(r: Ray3; p: Vec3): Ray3   {.importc: "ray3_addp",  header: "sol.h".}
proc ray3_addpf*(r: Ray3; f: Float): Ray3 {.importc: "ray3_addpf", header: "sol.h".}
proc ray3_addv*(r: Ray3; v: Vec3): Ray3   {.importc: "ray3_addv",  header: "sol.h".}
proc ray3_addvf*(r: Ray3; f: Float): Ray3 {.importc: "ray3_addvf", header: "sol.h".}
proc ray3_subp*(r: Ray3; p: Vec3): Ray3   {.importc: "ray3_subp",  header: "sol.h".}
proc ray3_subpf*(r: Ray3; f: Float): Ray3 {.importc: "ray3_subpf", header: "sol.h".}
proc ray3_psub*(p: Vec3; r: Ray3): Ray3   {.importc: "ray3_psub",  header: "sol.h".}
proc ray3_pfsub*(f: Float; r: Ray3): Ray3 {.importc: "ray3_pfsub", header: "sol.h".}
proc ray3_subv*(r: Ray3; v: Vec3): Ray3   {.importc: "ray3_subv",  header: "sol.h".}
proc ray3_subvf*(r: Ray3; f: Float): Ray3 {.importc: "ray3_subvf", header: "sol.h".}
proc ray3_vsub*(v: Vec3; r: Ray3): Ray3   {.importc: "ray3_vsub",  header: "sol.h".}
proc ray3_vfsub*(f: Float; r: Ray3): Ray3 {.importc: "ray3_vfsub", header: "sol.h".}
proc ray3_mulp*(r: Ray3; p: Vec3): Ray3   {.importc: "ray3_mulp",  header: "sol.h".}
proc ray3_mulpf*(r: Ray3; f: Float): Ray3 {.importc: "ray3_mulpf", header: "sol.h".}
proc ray3_mulv*(r: Ray3; v: Vec3): Ray3   {.importc: "ray3_mulv",  header: "sol.h".}
proc ray3_mulvf*(r: Ray3; f: Float): Ray3 {.importc: "ray3_mulvf", header: "sol.h".}
proc ray3_divp*(r: Ray3; p: Vec3): Ray3   {.importc: "ray3_divp",  header: "sol.h".}
proc ray3_divpf*(r: Ray3; f: Float): Ray3 {.importc: "ray3_divpf", header: "sol.h".}
proc ray3_pdiv*(p: Vec3; r: Ray3): Ray3   {.importc: "ray3_pdiv",  header: "sol.h".}
proc ray3_pfdiv*(f: Float; r: Ray3): Ray3 {.importc: "ray3_pfdiv", header: "sol.h".}
proc ray3_divv*(r: Ray3; v: Vec3): Ray3   {.importc: "ray3_divv",  header: "sol.h".}
proc ray3_divvf*(r: Ray3; f: Float): Ray3 {.importc: "ray3_divvf", header: "sol.h".}
proc ray3_vdiv*(v: Vec3; r: Ray3): Ray3   {.importc: "ray3_vdiv",  header: "sol.h".}
proc ray3_vfdiv*(f: Float; r: Ray3): Ray3 {.importc: "ray3_vfdiv", header: "sol.h".}
proc ray3_avgp*(r: Ray3; p: Vec3): Ray3   {.importc: "ray3_avgp",  header: "sol.h".}
proc ray3_avgpf*(r: Ray3; f: Float): Ray3 {.importc: "ray3_avgpf", header: "sol.h".}
proc ray3_avgv*(r: Ray3; v: Vec3): Ray3   {.importc: "ray3_avgv",  header: "sol.h".}
proc ray3_avgvf*(r: Ray3; f: Float): Ray3 {.importc: "ray3_avgvf", header: "sol.h".}

################################################################################
# Seg2 Functions ###############################################################
################################################################################

proc seg2_init*(orig, dest: Vec2): Seg2 {.importc: "seg2_init",  header: "sol.h".}
proc seg2_initv*(v: Vec2): Seg2         {.importc: "seg2_initv", header: "sol.h".}
proc seg2_initf*(f: Float): Seg2        {.importc: "seg2_initf", header: "sol.h".}
proc seg2_zero*(): Seg2                 {.importc: "seg2_zero",  header: "sol.h".}

proc seg2_add*(a, b: Seg2): Seg2         {.importc: "seg2_add",  header: "sol.h".}
proc seg2_addv*(s: Seg2; v: Vec2): Seg2  {.importc: "seg2_addv", header: "sol.h".}
proc seg2_addf*(s: Seg2; f: Float): Seg2 {.importc: "seg2_addf", header: "sol.h".}
proc seg2_sub*(a, b: Seg2): Seg2         {.importc: "seg2_sub",  header: "sol.h".}
proc seg2_subv*(s: Seg2; v: Vec2): Seg2  {.importc: "seg2_subv", header: "sol.h".}
proc seg2_vsub*(v: Vec2; s: Seg2): Seg2  {.importc: "seg2_vsub", header: "sol.h".}
proc seg2_subf*(s: Seg2; f: Float): Seg2 {.importc: "seg2_subf", header: "sol.h".}
proc seg2_fsub*(f: Float; s: Seg2): Seg2 {.importc: "seg2_fsub", header: "sol.h".}
proc seg2_mul*(a, b: Seg2): Seg2         {.importc: "seg2_mul",  header: "sol.h".}
proc seg2_mulv*(s: Seg2; v: Vec2): Seg2  {.importc: "seg2_mulv", header: "sol.h".}
proc seg2_mulf*(s: Seg2; f: Float): Seg2 {.importc: "seg2_mulf", header: "sol.h".}
proc seg2_div*(a, b: Seg2): Seg2         {.importc: "seg2_div",  header: "sol.h".}
proc seg2_divv*(s: Seg2; v: Vec2): Seg2  {.importc: "seg2_divv", header: "sol.h".}
proc seg2_vdiv*(v: Vec2; s: Seg2): Seg2  {.importc: "seg2_vdiv", header: "sol.h".}
proc seg2_divf*(s: Seg2; f: Float): Seg2 {.importc: "seg2_divf", header: "sol.h".}
proc seg2_fdiv*(f: Float; s: Seg2): Seg2 {.importc: "seg2_fdiv", header: "sol.h".}
proc seg2_avg*(a, b: Seg2): Seg2         {.importc: "seg2_avg",  header: "sol.h".}
proc seg2_avgv*(s: Seg2; v: Vec2): Seg2  {.importc: "seg2_avgv", header: "sol.h".}
proc seg2_avgf*(s: Seg2; f: Float): Seg2 {.importc: "seg2_avgf", header: "sol.h".}

################################################################################
# Seg2 Operators ###############################################################
################################################################################

template `+`*(a, b: Seg2): Seg2        = seg2_add(a, b)
template `+`*(s: Seg2; v: Vec2): Seg2  = seg2_addv(s, v)
template `+`*(v: Vec2; s: Seg2): Seg2  = seg2_addv(s, v)
template `+`*(s: Seg2; f: Float): Seg2 = seg2_addf(s, f)
template `+`*(f: Float; s: Seg2): Seg2 = seg2_addf(s, f)
template `-`*(a, b: Seg2): Seg2        = seg2_sub(a, b)
template `-`*(s: Seg2; v: Vec2): Seg2  = seg2_subv(s, v)
template `-`*(v: Vec2; s: Seg2): Seg2  = seg2_vsub(v, s)
template `-`*(s: Seg2; f: Float): Seg2 = seg2_subf(s, f)
template `-`*(f: Float; s: Seg2): Seg2 = seg2_fsub(f, s)
template `*`*(a, b: Seg2): Seg2        = seg2_mul(a, b)
template `*`*(s: Seg2; v: Vec2): Seg2  = seg2_mulv(s, v)
template `*`*(v: Vec2; s: Seg2): Seg2  = seg2_mulv(s, v)
template `*`*(s: Seg2; f: Float): Seg2 = seg2_mulf(s, f)
template `*`*(f: Float; s: Seg2): Seg2 = seg2_mulf(s, f)
template `/`*(a, b: Seg2): Seg2        = seg2_div(a, b)
template `/`*(s: Seg2; v: Vec2): Seg2  = seg2_divv(s, v)
template `/`*(v: Vec2; s: Seg2): Seg2  = seg2_vdiv(v, s)
template `/`*(s: Seg2; f: Float): Seg2 = seg2_divf(s, f)
template `/`*(f: Float; s: Seg2): Seg2 = seg2_fdiv(f, s)

template `+=`*(a: var Seg2; b: Seg2)  = a = seg2_add(a, b)
template `+=`*(s: var Seg2; v: Vec2)  = s = seg2_addv(s, v)
template `+=`*(s: var Seg2; f: Float) = s = seg2_addf(s, f)
template `-=`*(a: var Seg2; b: Seg2)  = a = seg2_sub(a, b)
template `-=`*(s: var Seg2; v: Vec2)  = s = seg2_subv(s, v)
template `-=`*(s: var Seg2; f: Float) = s = seg2_subf(s, f)
template `*=`*(a: var Seg2; b: Seg2)  = a = seg2_mul(a, b)
template `*=`*(s: var Seg2; v: Vec2)  = s = seg2_mulv(s, v)
template `*=`*(s: var Seg2; f: Float) = s = seg2_mulf(s, f)
template `/=`*(a: var Seg2; b: Seg2)  = a = seg2_div(a, b)
template `/=`*(s: var Seg2; v: Vec2)  = s = seg2_divv(s, v)
template `/=`*(s: var Seg2; f: Float) = s = seg2_divf(s, f)

################################################################################
# Seg3 Functions ###############################################################
################################################################################

proc seg3_init*(orig, dest: Vec3): Seg3 {.importc: "seg3_init",  header: "sol.h".}
proc seg3_initv*(v: Vec3): Seg3         {.importc: "seg3_initv", header: "sol.h".}
proc seg3_initf*(f: Float): Seg3        {.importc: "seg3_initf", header: "sol.h".}
proc seg3_zero*(): Seg3                 {.importc: "seg3_zero",  header: "sol.h".}

proc seg3_add*(a, b: Seg3): Seg3         {.importc: "seg3_add",  header: "sol.h".}
proc seg3_addv*(s: Seg3; v: Vec3): Seg3  {.importc: "seg3_addv", header: "sol.h".}
proc seg3_addf*(s: Seg3; f: Float): Seg3 {.importc: "seg3_addf", header: "sol.h".}
proc seg3_sub*(a, b: Seg3): Seg3         {.importc: "seg3_sub",  header: "sol.h".}
proc seg3_subv*(s: Seg3; v: Vec3): Seg3  {.importc: "seg3_subv", header: "sol.h".}
proc seg3_vsub*(v: Vec3; s: Seg3): Seg3  {.importc: "seg3_vsub", header: "sol.h".}
proc seg3_subf*(s: Seg3; f: Float): Seg3 {.importc: "seg3_subf", header: "sol.h".}
proc seg3_fsub*(f: Float; s: Seg3): Seg3 {.importc: "seg3_fsub", header: "sol.h".}
proc seg3_mul*(a, b: Seg3): Seg3         {.importc: "seg3_mul",  header: "sol.h".}
proc seg3_mulv*(s: Seg3; v: Vec3): Seg3  {.importc: "seg3_mulv", header: "sol.h".}
proc seg3_mulf*(s: Seg3; f: Float): Seg3 {.importc: "seg3_mulf", header: "sol.h".}
proc seg3_div*(a, b: Seg3): Seg3         {.importc: "seg3_div",  header: "sol.h".}
proc seg3_divv*(s: Seg3; v: Vec3): Seg3  {.importc: "seg3_divv", header: "sol.h".}
proc seg3_vdiv*(v: Vec3; s: Seg3): Seg3  {.importc: "seg3_vdiv", header: "sol.h".}
proc seg3_divf*(s: Seg3; f: Float): Seg3 {.importc: "seg3_divf", header: "sol.h".}
proc seg3_fdiv*(f: Float; s: Seg3): Seg3 {.importc: "seg3_fdiv", header: "sol.h".}
proc seg3_avg*(a, b: Seg3): Seg3         {.importc: "seg3_avg",  header: "sol.h".}
proc seg3_avgv*(s: Seg3; v: Vec3): Seg3  {.importc: "seg3_avgv", header: "sol.h".}
proc seg3_avgf*(s: Seg3; f: Float): Seg3 {.importc: "seg3_avgf", header: "sol.h".}

################################################################################
# Seg3 Operators ###############################################################
################################################################################

template `+`*(a, b: Seg3): Seg3        = seg3_add(a, b)
template `+`*(s: Seg3; v: Vec3): Seg3  = seg3_addv(s, v)
template `+`*(v: Vec3; s: Seg3): Seg3  = seg3_addv(s, v)
template `+`*(s: Seg3; f: Float): Seg3 = seg3_addf(s, f)
template `+`*(f: Float; s: Seg3): Seg3 = seg3_addf(s, f)
template `-`*(a, b: Seg2): Seg3        = seg3_sub(a, b)
template `-`*(s: Seg3; v: Vec3): Seg3  = seg3_subv(s, v)
template `-`*(v: Vec3; s: Seg3): Seg3  = seg3_vsub(v, s)
template `-`*(s: Seg3; f: Float): Seg3 = seg3_subf(s, f)
template `-`*(f: Float; s: Seg3): Seg3 = seg3_fsub(f, s)
template `*`*(a, b: Seg3): Seg3        = seg3_mul(a, b)
template `*`*(s: Seg3; v: Vec3): Seg3  = seg3_mulv(s, v)
template `*`*(v: Vec3; s: Seg3): Seg3  = seg3_mulv(s, v)
template `*`*(s: Seg3; f: Float): Seg3 = seg3_mulf(s, f)
template `*`*(f: Float; s: Seg3): Seg3 = seg3_mulf(s, f)
template `/`*(a, b: Seg3): Seg3        = seg3_div(a, b)
template `/`*(s: Seg3; v: Vec3): Seg3  = seg3_divv(s, v)
template `/`*(v: Vec3; s: Seg3): Seg3  = seg3_vdiv(v, s)
template `/`*(s: Seg3; f: Float): Seg3 = seg3_divf(s, f)
template `/`*(f: Float; s: Seg3): Seg3 = seg3_fdiv(f, s)

template `+=`*(a: var Seg3; b: Seg3)  = a = seg3_add(a, b)
template `+=`*(s: var Seg3; v: Vec3)  = s = seg3_addv(s, v)
template `+=`*(s: var Seg3; f: Float) = s = seg3_addf(s, f)
template `-=`*(a: var Seg3; b: Seg3)  = a = seg3_sub(a, b)
template `-=`*(s: var Seg3; v: Vec3)  = s = seg3_subv(s, v)
template `-=`*(s: var Seg3; f: Float) = s = seg3_subf(s, f)
template `*=`*(a: var Seg3; b: Seg3)  = a = seg3_mul(a, b)
template `*=`*(s: var Seg3; v: Vec3)  = s = seg3_mulv(s, v)
template `*=`*(s: var Seg3; f: Float) = s = seg3_mulf(s, f)
template `/=`*(a: var Seg3; b: Seg3)  = a = seg3_div(a, b)
template `/=`*(s: var Seg3; v: Vec3)  = s = seg3_divv(s, v)
template `/=`*(s: var Seg3; f: Float) = s = seg3_divf(s, f)

################################################################################
# Mat2 Functions ###############################################################
################################################################################

proc mat2_init*(f11, f12, f21, f22: Float): Mat2 {.importc: "mat2_init",  header: "sol.h".}
proc mat2_initv*(v1, v2: Vec2): Mat2             {.importc: "mat2_initv", header: "sol.h".}
proc mat2_initf*(f: Float): Mat2                 {.importc: "mat2_initf", header: "sol.h".}
proc mat2_zero*(): Mat2                          {.importc: "mat2_zero",  header: "sol.h".}
